k8s-deploy/production/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: parliamentary-questions
  name: parliamentary-questions
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: parliamentary-questions
  template:
    metadata:
      labels:
        app: parliamentary-questions
    spec:
      containers:
        - command:
            - sh
            - "-c"
            - "bundle exec puma -p 3000"
          image: "754256621582.dkr.ecr.eu-west-2.amazonaws.com/pq-team/parliamentary-questions:latest"
          imagePullPolicy: Always
          name: parliamentary-questions-rails-app
          ports:
            - containerPort: 3000
