k8s-deploy/production/deployment_sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: parliamentary-questions-sidekiq
  name: parliamentary-questions-sidekiq
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: parliamentary-questions-sidekiq
  template:
    metadata:
      labels:
        app: parliamentary-questions-sidekiq
    spec:
      containers:
        - name: parliamentary-questions-rails-jobs
          command: ["./docker/entrypoint-background-jobs.sh"]
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - 'sidekiqmon | grep "parliamentary-questions"'
            initialDelaySeconds: 40
            periodSeconds: 60
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - 'sidekiqmon | grep "parliamentary-questions"'
            initialDelaySeconds: 40
            periodSeconds: 60
