k8s-deploy/production/ingress-live.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parliamentary-questions
  namespace: parliamentary-questions-production
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: parliamentary-questions-parliamentary-questions-production-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  rules:
    - host: trackparliamentaryquestions.service.gov.uk
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: parliamentary-questions-service
              port: 
                number: 3000
  tls:
    - hosts:
        - trackparliamentaryquestions.service.gov.uk
      secretName: parliamentary-questions-production-cert
