k8s-deploy/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: parliamentary-questions
  namespace: parliamentary-questions-production
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: pq-secrets
spec:
  rules:
    - host: trackparliamentaryquestions.service.gov.uk
      http:
        paths:
          - backend:
              serviceName: parliamentary-questions-service
              servicePort: 3000
            path: /
  tls:
    - hosts:
        - trackparliamentaryquestions.service.gov.uk
      secretName: parliamentary-questions-production-cert
